<resources>
    <string name="app_name">TinderLibros</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_message">Bienvenido</string>
    <string name="signin_message">Registrate</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="signin_button">Registrarme</string>
    <string name="principal_message">Aquí estan los libros</string>
    <string name="libro_detalles">Detalles de libro</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="config">Configuración</string>
    <string name="salir">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>